--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
 }
@@ -16,12 +17,18 @@ h1 {
 
 h2 {
   font-family: var(--heading-font-family);
-  font-size: 24px;
+  font-size: 64px;
 }
 
 h3 {
   font-family: var(--heading-font-family);
   font-size: 24px;
+}
+
+p {
+  font-family: var(--default-font-family);
+  font-size: 16px;
+  line-height: 30px;
 }
 
 a {
@@ -46,4 +53,46 @@ a {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.btn-branding-secondary {
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid var(--branding-color);
+  color: var(--branding-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 900px) {
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 44px;
+}
+
+.hero h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+.project-description {
+  padding: 0;
+  text-align: center;
+}
+
+.hero p {
+  font-size: 36px;
 }
