--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,29 @@ a {
   font-weight: 700;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.about-section p {
+  font-size: 16px;
+  line-height: 30px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -70,29 +93,33 @@ a {
 }
 
 @media (max-width: 900px) {
-}
+  h1 {
+    font-size: 40px;
+  }
 
-h1 {
-  font-size: 40px;
-}
+  h2 {
+    font-size: 44px;
+  }
 
-h2 {
-  font-size: 44px;
-}
+  .hero h2 {
+    font-size: 24px;
+  }
 
-.hero h2 {
-  font-size: 24px;
-}
+  h3 {
+    font-size: 16px;
+  }
 
-h3 {
-  font-size: 16px;
-}
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 
-.project-description {
-  padding: 0;
-  text-align: center;
-}
+  .hero p {
+    font-size: 36px;
+  }
 
-.hero p {
-  font-size: 36px;
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
 }
