--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,6 @@
   --secondary-color: #f9f7fe;
 }
 
-/* h1,
-h2,
-h3 {
-} */
-
 h1 {
   font-family: var(--heading-font-family);
   font-size: 96px;
@@ -46,25 +41,25 @@ a {
   font-weight: 700;
 }
 
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
 
-.about-section-content {
+.content {
   margin: 30px;
 }
 
-.about-section h1 {
+.content-container h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.about-section p {
+.content-container p {
   font-size: 16px;
   line-height: 30px;
 }
@@ -90,6 +85,20 @@ a {
 
 .project-description {
   padding: 120px 60px;
+}
+
+.img-card {
+  text-align: center;
+}
+
+.img-card h3 {
+  font-family: var(--default-font-family);
+  font-weight: 700;
+}
+
+.img-card p {
+  font-size: 14px;
+  font-weight: 500;
 }
 
 @media (max-width: 900px) {
@@ -118,8 +127,13 @@ a {
     font-size: 36px;
   }
 
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
+  }
+
+  .content-container h1 {
+    font-size: 40px;
+    line-height: 50px;
   }
 }
