--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,10 @@
   --secondary-color: #f9f7fe;
 }
 
+body {
+  font-family: var(--default-font-family);
+}
+
 h1 {
   font-family: var(--heading-font-family);
   font-size: 96px;
@@ -83,6 +87,36 @@ a {
   padding: 15px 30px;
 }
 
+.logo {
+  max-height: 40px;
+}
+
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 10px;
+}
+
+nav a {
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
+
 .project-description {
   padding: 120px 60px;
 }
@@ -135,5 +169,8 @@ a {
   .content-container h1 {
     font-size: 40px;
     line-height: 50px;
+  }
+
+  nav a {
   }
 }
