--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,11 @@ h3 {
   font-size: 24px;
 }
 
+h4 {
+  font-size: 48px;
+  font-family: var(--heading-font-family);
+}
+
 p {
   font-family: var(--default-font-family);
   font-size: 16px;
@@ -117,6 +122,45 @@ nav li.active a {
   color: var(--branding-color);
 }
 
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+.social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  font-size: 18px;
+  padding: 10px 15px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+.social-links a:hover {
+  color: #fff;
+  background-color: var(--branding-color);
+}
+
+.email-link {
+  color: #000;
+  font-size: 24px;
+  text-align: center;
+}
+
+.email-link:hover {
+  color: var(--branding-color);
+}
+
 .project-description {
   padding: 120px 60px;
 }
@@ -144,10 +188,6 @@ nav li.active a {
     font-size: 44px;
   }
 
-  .hero h2 {
-    font-size: 24px;
-  }
-
   h3 {
     font-size: 16px;
   }
@@ -161,6 +201,10 @@ nav li.active a {
     font-size: 36px;
   }
 
+  .hero h2 {
+    font-size: 24px;
+  }
+
   .content-container {
     text-align: center;
     padding: 0;
@@ -169,8 +213,5 @@ nav li.active a {
   .content-container h1 {
     font-size: 40px;
     line-height: 50px;
-  }
-
-  nav a {
   }
 }
